scripts/kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nicedoc-app
spec:
  selector:
    matchLabels:
      app: nicedoc
      tier: app
  replicas: 1
  template:
    metadata:
      labels:
        app: nicedoc
        tier: app
    spec:
      containers:
        - name: nicedoc-app
          image: "registry.ng.bluemix.net/nicedoc/nicedoc:latest"
          ports:
            - name: http
              containerPort: 3000
      imagePullSecrets:
        - name: regcred
