scripts/kubernetes/app-service.yml
kind: Service
apiVersion: v1
metadata:
  name: nicedoc-app
spec:
  selector:
    app: nicedoc
    tier: app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: http
